--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Data Mesh Learning - Contribute</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/simple-sidebar.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <div class="d-flex" id="wrapper">
+
+    <!-- Sidebar -->
+    <div class="bg-light border-right" id="sidebar-wrapper">
+      <div class="sidebar-heading">Quick Links</div>
+      <div class="list-group list-group-flush">
+        <a href="https://datameshlearning.github.io/intro-to-data-mesh/" class="list-group-item list-group-item-action bg-light">Intro to Data Mesh</a>
+        <a href="https://datameshlearning.github.io/lodestone-content/" class="list-group-item list-group-item-action bg-light">Lodestone Content</a>
+        <a href="https://datameshlearning.github.io/user-stories/" class="list-group-item list-group-item-action bg-light">User Stories</a>
+        <a href="https://datameshlearning.github.io/getting-buy-in/" class="list-group-item list-group-item-action bg-light">Getting Buy-In</a>
+        <a href="https://datameshlearning.github.io/join-the-community/" class="list-group-item list-group-item-action bg-light">Join The Community</a>
+        <a href="https://datameshlearning.github.io/request-content/" class="list-group-item list-group-item-action bg-light">Request Content</a>
+        <a href="https://datameshlearning.github.io/create-content/" class="list-group-item list-group-item-action bg-light">Create Content</a>
+        <a href="https://datameshlearning.github.io/other-content/" class="list-group-item list-group-item-action bg-light">Other Content</a>
+        <a href="https://datameshlearning.github.io/contribute/" class="list-group-item list-group-item-action bg-light">Contribute</a>
+        <a href="https://datameshlearning.github.io/FAQ/" class="list-group-item list-group-item-action bg-light">FAQ</a>          
+        <a href="https://datameshlearning.github.io/thank-yous/" class="list-group-item list-group-item-action bg-light">Thank Yous</a>
+        <a href="https://datameshlearning.github.io/vendors/" class="list-group-item list-group-item-action bg-light">Vendors</a>
+        <a href="https://datameshlearning.github.io/contact/" class="list-group-item list-group-item-action bg-light">Contact</a>
+      </div>
+    </div>
+    <!-- /#sidebar-wrapper -->
+
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+        <button class="btn btn-primary" id="menu-toggle">Close/Open Sidebar</button>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="https://datameshlearning.github.io/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="https://datameshlearning.github.io/contact/">Contact</a>
+            </li>
+            <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Community
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="https://launchpass.com/data-mesh-group">Slack</a>
+                <a class="dropdown-item" href="https://datameshlearning.github.io/mailing-list/">Mailing List</a>
+                <a class="dropdown-item" href="https://datameshlearning.github.io/newsletter/">Newsletter</a>
+                <a class="dropdown-item" href="https://datameshlearning.github.io/meetups/">Meetups</a>
+                <a class="dropdown-item" href="https://datameshlearning.github.io/code-of-conduct/">Code of Conduct</a>
+             </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="container-fluid">
+        <h1 class="mt-4">Contribute to the Data Mesh Community</h1>
+        <p>If you are interested in contributing to the overall data mesh community and/or Data Mesh Learning, welcome! The easiest/best way to contribute is probably just being active in the Slack community, connecting people to resources and being helpful. There are many other ways you could contribute so if you have an idea, we would love to hear it, <a href="mailto:community@datameshlearning.com">email us</a> or message Scott Hirleman in the Slack community. That said, there are some things we've come up with below:</p>
+        <p>Community promotion: generally, just telling people about the community. If you find value from it and want others to experience the same, tell them! :D The easiest way to sign up is to send them here: <a href="https://launchpass.com/data-mesh-group">https://launchpass.com/data-mesh-group</a></p>
+        <p>Content review (prior to publishing): we want to offer people creating content (user stories, blog posts, presentations, videos, etc.) a chance for others to review and give feedback before publishing. If you want to volunteer to review content before it gets published, please sign up using <a href="https://docs.google.com/forms/d/e/1FAIpQLSeOXlz070Fcv0bmKY7A7YvkB9f3OD9-NsRB6BUhTrBCyFaLNA/viewform?usp=sf_link">this Google Form</a>. Contact information provided will only be used for the purpose of content review.</p>
+        <p>Content classification: we are attempting to build a repository of data mesh and data mesh tangential content. Thus far, it is quite, quite early days... Not experts on data classification and management over here so some friendly guidance on how to handle would be great. The plan is for an information resource AND a relatively easy way to find good links to put into newly created content. Links like that are good for informational purposes but also help drive up SEO and trust rankings.</p>
+        <p>Slack community management: Once we've seen you in action in the Slack channel, we are happy to share the load of managing the data mesh community. We don't believe communities should be controlled by a single person and we want to be able to bring many people in who share the same goals of collaboration and communication and a committment to be excellent to each other.</p>
+        <p>Website management: this "website" in it's current form is a bit of a hot mess, based off a single <a href="https://www.youtube.com/watch?v=alMTZlYdIl4">great tutorial on GitHub Pages</a>. No really, it was great, it just isn't really for what this morphed into. So, as the community picks up steam, it is likely to get moved to a formal website with a WordPress system and everything. If you want to be part of that, it would be greatly, greatly appreciated ;) </p>
+        <p>Other ideas? as we said, let us know in Slack or <a href="mailto:community@datameshlearning.com">via email</a>.</p>
+            </div>
+    </div>
+    <!-- /#page-content-wrapper -->
+
+  </div>
+  <!-- /#wrapper -->
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Menu Toggle Script -->
+  <script>
+    $("#menu-toggle").click(function(e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+    });
+  </script>
+
+</body>
+
+</html>
